# galaxyharvester

./: Dockerfile  catchupMail.py  checkAlerts.py  cleanupDaily.py  dbInfo.py  docker-compose.yml  keyInfo.py  kukkaisvoima_settings.py  mailInfo.py  mailer.py  pyproject.toml  resourceDump.py
database/: createSWGresourcedb.sql
html/: addResources.py  apps.py  authUser.py  blog.py  changeAvailability.py  changeFriend.py  checkOldResource.py  createUser.py  creatureList.py  dbSession.py  dbShared.py  delCreatureResource.py  delSchematic.py  delUser.py  delWaypoint.py  feedback.py  feeds.py  galaxy.py  getAlerts.py  getComponentList.py  getCreatureList.py  getCreatureResourceGroups.py  getCreatureResourceTypes.py  getCurrentUserNames.py  getFavoriteList.py  getFeedback.py  getFilters.py  getFriendsList.py  getHarvesterData.py  getLatestResources.py  getList.py  getMemberList.py  getMyGroups.py  getRecipeList.py  getResourceByImage.py  getResourceByName.py  getResourceByTypeAndFuzzyName.py  getResourceGroupList.py  getResourceList.py  getResourceTypeList.py  (+66 more)
html/js/: ghShared.js
html/style/: ghCore.css
html/templates/: addresources.html  alerts.html  apps.html  blocks.html  creaturelist.html  feeds.html  galaxy.html  help.html  home.html  inventory.html  message.html  recipe.html  resource.html  resourcefinder.html  resourcelist.html  resourcetype.html  schematiceditor.html  schematics.html  stats.html  surveylist.html  user.html  waypointmaps.html
scripts/: getCreatureData.py  getSchematicDataOR.py  loadDataFromLive.py
test/pyunit/: testObjects.py  testShared.py
